--- a/doc/D52/D52_Sapienza.tex
+++ b/doc/D52/D52_Sapienza.tex
@@ -71,9 +71,10 @@
 
 % NOTE ITSELF BELOW %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title{D5.2\\ Definition of the use cases for the demonstrations}
+\title{D5.2-Sapienza\\ Definition of the use cases for the demonstrations}
 
-\author{Domenico D. Bloisi, Fabio Maria Carlucci, Luca Iocchi, and Daniele Nardi\\
+\author{Domenico D. Bloisi, Fabio Maria Carlucci, Luca Iocchi, Daniele Nardi, and \\
+Andrea Pennisi\\
 \textit{Dept. of Computer, Control and Management Engineering\\
 Sapienza University of Rome\\
 via Ariosto, 25 00185 Rome, Italy}}
@@ -81,7 +82,7 @@ via Ariosto, 25 00185 Rome, Italy}}
 
 %\nb{of the kickoff meeting, $27^{th},28^{th}$ October }
 
-\date{December 30, 2014}
+\date{Version 1.0 - December 30, 2014}
 
 \begin{document}
 
