corrected a few typos

--- a/doc/D51/D51_Sapienza.tex
+++ b/doc/D51/D51_Sapienza.tex
@@ -237,7 +237,7 @@ Some examples of these external packages are:
 Automated scripts for initializing, setting-up, updating, building and testing the software environment have been developed and described in the repository. These scripts facilitate updates and testing and thus in  general the integration of functionalities developed by the different developers.
 
 \begin{itemize}
-\item \emph{coaches\_init}: initialize the software development envorinment (to be run once in every computer used for development);
+\item \emph{coaches\_init}: initialize the software development environment (to be run once in every computer used for development);
 \item \emph{coaches\_setup}:   set up all the system variables needed for development (to be run on every shell used for development);
 \item \emph{coaches\_update}:  update of all the software from the GIT repository to the local workspace;
 \item \emph{coaches\_make}:   build all the software
