--- a/doc/D52/D52_Sapienza.tex
+++ b/doc/D52/D52_Sapienza.tex
@@ -106,7 +106,7 @@ The copyright in this document is the property of the COACHES Consortium. This d
 }
 \newpage
 
-\input{UseCases_sapienza}
+\input{UseCases_Sapienza}
 
 
 \end{document}
