--- a/doc/D52/D52_Sapienza.tex
+++ b/doc/D52/D52_Sapienza.tex
@@ -73,8 +73,8 @@
 
 \title{D5.2-Sapienza\\ Definition of the use cases for the demonstrations}
 
-\author{Domenico D. Bloisi, Fabio Maria Carlucci, Luca Iocchi, Daniele Nardi, and \\
-Andrea Pennisi\\
+\author{Domenico D. Bloisi, Fabio Maria Carlucci, Giorgio Grisetti, \\
+Luca Iocchi, and Daniele Nardi\\
 \textit{Dept. of Computer, Control and Management Engineering\\
 Sapienza University of Rome\\
 via Ariosto, 25 00185 Rome, Italy}}
