--- a/doc/KickOffMeeting/KO-meeting-DoW.tex
+++ b/doc/KickOffMeeting/KO-meeting-DoW.tex
@@ -21,8 +21,8 @@
   \noindent
   \begin{center}
   \textbf{
-  %{\centering\includegraphics[height=3cm,bb=0 0 371 145]{../logoCHISTERA2014.png}}\\
-  {\centering\includegraphics[height=3cm]{../logoCHISTERA2014.eps}}\\
+  {\centering\includegraphics[height=3cm,bb=0 0 371 145]{../logoCHISTERA2014.png}}\\
+  %{\centering\includegraphics[height=3cm]{../logoCHISTERA2014.eps}}\\
    {\centering\Large COACHES project, CHIST-ERA 2014 program}
   }
   \end{center}
