--- a/doc/D42/TR_Tasks3-4.tex
+++ b/doc/D42/TR_Tasks3-4.tex
@@ -21,7 +21,7 @@
   \noindent
   \begin{center}
   \textbf{
-  {\centering\includegraphics[height=3cm]{logoCHISTERA2014}}\\
+  {\centering\includegraphics[height=3cm]{../logoCHISTERA2014}}\\
    {\centering\Large COACHES project, CHIST-ERA 2014 program}
   }
   \end{center}
@@ -70,8 +70,8 @@
 \date{\today}
 
 \begin{document}
-\includegraphics[height=2cm]{logoUNICAEN}
-\includegraphics[height=2cm]{logoSapienza.png}
+\includegraphics[height=2cm]{../logoUNICAEN.jpg}
+\includegraphics[height=2cm]{../logoSapienza.png}
 \includegraphics[height=2cm]{logo-vub}
 \includegraphics[height=2cm]{logoSebanci}
 
@@ -97,7 +97,7 @@ The copyright in this document is the property of the COACHES Consortium. This d
 \section{Introduction}
 This document consists of describing different tasks that we will consider in the project and dialogues between the robots and the human (visitors, shopkeepers and the security unit).  The general framework consists of a communication between the knowledge-based module (WP1) and the decision module (WP4) where the decision module receives a set of goals to accomplish based on the reasoning of the KB module using different information, features and requests coming from sensors and the interaction module (WP3). The decision module develop a policy to select the goal to accomplish and how to accomplish it. This policy dictates to the robots to act by navigating, advertising (or both at the same time), to initiate a dialogue, or to patrol. All the these tasks will be described in the following. 
 \section {Basic principles}
-Robots receive from KB module a set of goals $G = \{ g_{1}, g_{2}, \ldots, g_{k} \}$ where goals concern advertisement, patrolling, assisting and escorting.  We note also that advertising goals could be performed in parallel with the moving goal. ThatÕs why, we consider an incremental structure of tasks IST, inspired from progressive processing units. Indeed, we define four IST or each kind of goals. Each IST is composed of levels where the first level concern goto site $X$, the second level concern do advertisement at a location $(x,y)$ and do $X$ which concerns the assistance, the patrolling or the escorting. In addition to that, we consider some joint goals requiring joint IST.  For example, escorting a people from one location in a building to another location in the other building, this requires a cooperation between robots. Indeed, the first robot execute a policy of IST escorting the people to the exit of the first building, provide him information to reach the other building and then send information to the other robots in the other building to continue the escorting task at the second building. The structure of tasks we propose is as follows \{goto $x$, advertisement, do $x$ \} and for the joint task {\sc \{ goto $x$, advertisement, inform people, send message to the other robots \}} . Do $x$ concerns different tasks of assistance. That we develop in the following. 
+Robots receive from KB module a set of goals $G = \{ g_{1}, g_{2}, \ldots, g_{k} \}$ where goals concern advertisement, patrolling, assisting and escorting.  We note also that advertising goals could be performed in parallel with the moving goal. Thatï¿½s why, we consider an incremental structure of tasks IST, inspired from progressive processing units. Indeed, we define four IST or each kind of goals. Each IST is composed of levels where the first level concern goto site $X$, the second level concern do advertisement at a location $(x,y)$ and do $X$ which concerns the assistance, the patrolling or the escorting. In addition to that, we consider some joint goals requiring joint IST.  For example, escorting a people from one location in a building to another location in the other building, this requires a cooperation between robots. Indeed, the first robot execute a policy of IST escorting the people to the exit of the first building, provide him information to reach the other building and then send information to the other robots in the other building to continue the escorting task at the second building. The structure of tasks we propose is as follows \{goto $x$, advertisement, do $x$ \} and for the joint task {\sc \{ goto $x$, advertisement, inform people, send message to the other robots \}} . Do $x$ concerns different tasks of assistance. That we develop in the following. 
 
 %\begin{figure}[htbp]
 %\begin{center}
@@ -106,21 +106,31 @@ Robots receive from KB module a set of goals $G = \{ g_{1}, g_{2}, \ldots, g_{k}
 %\label{Fig-1}
 %\end{center}
 %\end{figure}
-\section {Description of Tasks}The global structure of tasks will be based on a hierarchy of modules to execute: \begin{figure}[htbp]
+\section {Description of Tasks}
+
+The global structure of tasks will be based on a hierarchy of modules to execute: 
+
+\begin{figure}[htbp]
 \begin{center}
 \includegraphics[height=10cm]{GeneralTask}
 \caption{General task structure }
 \label{FigTaskstructure}
 \end{center}
-\end{figure}The two subtasks goto and advertise are supposed to be executed in parallel where goto $X$ is a subtask sent to the module navigation for execution and advertise is sent to the module multi-modale interaction for advertisement considering the current location of the robot. This subtask is optional and the human can stop the advertisement when needed. This structure will serve to express different tasks that we consider in the project: 
-\begin{enumerate}\item {\it Assistance Task (AT)}: this task consists in joining the location of the person and then use a dialogue subtask to exchange with him to make clear his needs. The structure of the task. Dialogue can concern: showing a direction, searching a shop, advertise and transporting goods. The schema of this dialogue is given in the next section.
+\end{figure}
+
+The two subtasks goto and advertise are supposed to be executed in parallel where goto $X$ is a subtask sent to the module navigation for execution and advertise is sent to the module multi-modale interaction for advertisement considering the current location of the robot. This subtask is optional and the human can stop the advertisement when needed. 
+
+This structure will serve to express different tasks that we consider in the project: 
+\begin{enumerate}
+\item {\it Assistance Task (AT)}: this task consists in joining the location of the person and then use a dialogue subtask to exchange with him to make clear his needs. The structure of the task. Dialogue can concern: showing a direction, searching a shop, advertise and transporting goods. The schema of this dialogue is given in the next section.
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[height=10cm]{AssistanceTask}
 \caption{Assistance task }
 \label{FigAssistanceTask}
 \end{center}
-\end{figure}\item {\it Escorting task (ET)}: this task consists of joining the person and escorting him to his target destination by maintaining the joint intention. When the behavior of the human is not appropriate, a dialogue between the robot and him js performed. This dialogue is described in the next section. 
+\end{figure}
+\item {\it Escorting task (ET)}: this task consists of joining the person and escorting him to his target destination by maintaining the joint intention. When the behavior of the human is not appropriate, a dialogue between the robot and him js performed. This dialogue is described in the next section. 
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[height=10cm]{EscortingTask}
@@ -128,21 +138,24 @@ Robots receive from KB module a set of goals $G = \{ g_{1}, g_{2}, \ldots, g_{k}
 \label{FigEscortTask}
 \end{center}
 \end{figure}
-\item {\it Collaborative Task (CT)}: this task consists in joining the location execute the part of the task, send message to the other robots during the travel and then inform the person.
+
+\item {\it Collaborative Task (CT)}: this task consists in joining the location execute the part of the task, send message to the other robots during the travel and then inform the person.
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[height=10cm]{JointTask}
 \caption{Joint task }
 \label{FigjointTask}
 \end{center}
-\end{figure}\item {\it Welcoming visitor task  (PT)}: this task consists in going to the entrance and initiating a dialogue with a visitor. The dialogue is described bellow  and is the same as for assistance task. 
+\end{figure}
+\item {\it Welcoming visitor task  (PT)}: this task consists in going to the entrance and initiating a dialogue with a visitor. The dialogue is described bellow  and is the same as for assistance task. 
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[height=10cm]{patrolTask}
 \caption{Patrol task }
 \label{FigPatrolTask}
 \end{center}
-\end{figure}\item {\it Surveillance task (ST)}: this task consists in heading a destination where an abnormal object has been detected, taking a picture, send it and then call the security unit when informing people to be away from this object. 
+\end{figure}
+\item {\it Surveillance task (ST)}: this task consists in heading a destination where an abnormal object has been detected, taking a picture, send it and then call the security unit when informing people to be away from this object. 
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[height=10cm]{SecurityTask}
