--- a/doc/KickOffMeeting/KO-meeting-DoW.tex
+++ b/doc/KickOffMeeting/KO-meeting-DoW.tex
@@ -21,8 +21,8 @@
   \noindent
   \begin{center}
   \textbf{
-  {\centering\includegraphics[height=3cm,bb=0 0 371 145]{../logoCHISTERA2014.png}}\\
-  %{\centering\includegraphics[height=3cm]{../logoCHISTERA2014.eps}}\\
+  {\centering\includegraphics[height=3cm,bb=0 0 371 145]{../fig/logoCHISTERA2014.png}}\\
+  %{\centering\includegraphics[height=3cm]{../fig/logoCHISTERA2014.eps}}\\
    {\centering\Large COACHES project, CHIST-ERA 2014 program}
   }
   \end{center}
@@ -68,7 +68,7 @@
 \author{COACHES Consortium}
 \nb{of the kickoff meeting, $27^{th},28^{th}$ October }
 
-\date{\today}
+\date{}
 
 \begin{document}
 
