--- a/doc/D42/D42_Caen_Sapienza.tex
+++ b/doc/D42/D42_Caen_Sapienza.tex
@@ -27,8 +27,7 @@
   \noindent
   \begin{center}
   \textbf{
-  {\centering\includegraphics[height=3cm,bb=0 0 371 145]{../logoCHISTERA2014.png}}\\
-  %{\centering\includegraphics[height=3cm]{../logoCHISTERA2014.eps}}\\
+  {\centering\includegraphics[height=3cm,bb=0 0 371 145]{../fig/logoCHISTERA2014.png}}\\
    {\centering\Large COACHES project, CHIST-ERA 2014 program}
   }
   \end{center}
@@ -88,9 +87,9 @@ Univeristé de Caen Basse-Normandie}}
 
 \begin{document}
 
-\includegraphics[height=2cm]{../logoUniCaen.png}
+\includegraphics[height=2cm]{../fig/logoUniCaen.png}
 \hspace{4cm}
-\includegraphics[height=2.2cm]{../logoSapienza.png}
+\includegraphics[height=2.2cm]{../fig/logoSapienza.png}
 
 \makemadtitle
 
